--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -803,7 +803,7 @@ var assessmentOID = startAssessment(FormOID);
                 for (var i = 0; i < data.Items.length; i++) {
                     for (var j = 0; j < data.Items[i].Elements.length; j++) {
                         if (typeof (data.Items[i].Elements[j].Map) == 'undefined') {
-                            screen = screen + "<div style=\'height: 30px\' >" + data.Items[i].Elements[j].Description + "</div>"
+                            screen = screen + "<div style=\'height: 30px\' >" + data.Items[i].Elements[j].Description + "</br></div>"
                         } else {
                             for (var k = 0; k < data.Items[i].Elements[j].Map.length; k++) {
                                 switch (data.Items[i].Elements[j].Map[k].Description) {
