--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -254,7 +254,7 @@
 }
 							
 					$.ajax(settings1).done(function (response) {
-					  //console.log("amhere  ");
+					  console.log("amhere  ");
 					  console.log(response);
 					});
 										
