--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -482,7 +482,7 @@ prorecommend();
 				  "url": "https://sapphire-demo.meliorix.com/dev/cds-hook-api/api/v1/cds-task/getTasksOwned",
 				  "method": "GET",
 				  "headers": {
-					"userId": "4342008",
+					"userId": patID,
 					"Cache-Control": "no-cache",
 					"Postman-Token": "bd1cfc8b-da36-4f74-ac1c-289fde061b9c"
 				  }
