--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -433,6 +433,8 @@ prorecommend();
 		//var FormOID ="80C5D4A3-FC1F-4C1B-B07E-10B796CF8105";
 		
 		function startTask(taskId){
+			
+			alert(MyVars.patid);
 		var settings = {
 				  "async": true,
 				  "crossDomain": true,
