--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -477,7 +477,7 @@ prorecommend();
 		
 		function displayList(){
 			
-			alert(MyVars.patid);
+			alert(MyVars.patid + "here");
 		var settings3 = {
 				  "async": false,
 				  "crossDomain": true,
