--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -478,8 +478,8 @@ prorecommend();
 		function displayList(){
 			
 			alert(patID+ "here");
-			var obj= defaultPatient();
-			alert(obj);
+			//var obj= defaultPatient();
+			//alert(obj);
 		var settings3 = {
 				  "async": false,
 				  "crossDomain": true,
