--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -480,6 +480,10 @@ prorecommend();
 			alert(patID+ "here");
 			//var obj= defaultPatient();
 			//alert(obj);
+			
+			 function onReady(smart) {
+				 console.log(smart.tokenResponse.patient + "plssssssssss");
+			 }
 		var settings3 = {
 				  "async": false,
 				  "crossDomain": true,
