--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -482,7 +482,8 @@ prorecommend();
 			//alert(obj);
 			
 			 function onReady(smart) {
-				 console.log(smart.tokenResponse.patient + "plssssssssss");
+				 console.log(smart.tokenResponse.patient);
+				 console.log("plssssssss");
 			 }
 		var settings3 = {
 				  "async": false,
