--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -476,7 +476,13 @@ prorecommend();
 		
 		
 		function displayList(){
-			
+			function B(r)
+				{
+					
+					console.log(r);
+					console.log("fin")
+				   // use_rand_num(r);
+				}
 			
 		var settings3 = {
 				  "async": false,
