--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -586,7 +586,7 @@ prorecommend();
 		{
 				//completeProcess();
 				window.location.reload(false);
-				displayList();
+				//displayList();
 				document.getElementById('Content').style.display = 'none';
 				document.getElementById('header1').style.display = 'none';
 				document.getElementById('list').style.display = 'block';
