--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -194,7 +194,7 @@
 		<div class="row">
 			<div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 " >
 			</br>
-			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome, Wilma Smart !</P></br></br>			
+			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome,<b><span id='lname'></span>, <span id='fname'></b>!</P></br></br>			
 			</div>
 		</div>	
 		<div id="list">
