--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -182,7 +182,7 @@
   </br>
 			
 
-	<h3 style="margin-left:0.5em;">Recommended PRO for <b><span id='lname1'></span>, <span id='fname1'></span></b></h3>
+	<h3 style="margin-left:0.5em;">Recommended PRO for <b> <span id='fname1'></span> <span id='lname1'></span></b></h3>
 	<div id="content">
 	  </div>  
   </article>
@@ -194,7 +194,7 @@
 		<div class="row">
 			<div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 " >
 			</br>
-			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome,<b><span id='lastname'></span>, <span id='firstname'></span></b>!</P></br></br>			
+			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <b> <span id='firstname'></span> <span id='lastname'></span></b>!</P></br></br>			
 			</div>
 		</div>	
 		<div id="list">
