--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -192,7 +192,7 @@
 	
 	<div class="container-fluid">
 		<div class="row">
-			<div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 " >
+			<div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 " >
 			</br>
 			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <b> <span id='firstname'></span> <span id='lastname'></span></b>!</P></br></br>			
 			</div>
