--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -728,6 +728,8 @@ prorecommend();
 						if (data.Items.length > 1) {
 							HasMultipleItems = true;
 						}
+						
+						screen= screen + "<p style='margin-left:1em;'><b>Questionnaire for PROMIS Bank v2.0 - Physical Function</b></p></br>"
 						//var win = window.open("", "Title", "toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=780,height=200,top="+(screen.height-400)+",left="+(screen.width-840));
 
 
