--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -742,7 +742,7 @@ prorecommend();
 						}
 						
     	
-						screen= screen + "<p style='margin-left:1em;'><b>Questionnaire for <span id='pro-name'></span></b></p></br>"
+						//screen= screen + "<p style='margin-left:1em;'><b>Questionnaire for <span id='pro-name'></span></b></p></br>"
 						//var win = window.open("", "Title", "toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=780,height=200,top="+(screen.height-400)+",left="+(screen.width-840));
 
 
