--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -205,7 +205,7 @@
 	<div hidden id="Ques" class="container-fluid">
 		<div  class="row"  style="text-align: left; padding-top: 20px; font-size: 14px;">
 					<div id="header1"  class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					 
+					 <p style='margin-left:1em;'><b>Questionnaire for <span id='pro-name'></span></b></p>
 						</br>
 						</br>
 					</div>
