--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -239,8 +239,8 @@
 					var date1 =new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('.')[0];
 							console.log(date1);
 							console.log(window.patient_id);
-							console.log(fname);
-				                        console.log(lname);
+							console.log("fname");
+				                        console.log("lname");
 							//console.log(practitioner_id);
 							//console.log(window.gender2);
 							//console.log(window.dobstr2);	
@@ -254,8 +254,7 @@
 					  "method": "POST",
 					  "headers": {
 					    "Content-Type": "application/json",
-					    "Cache-Control": "no-cache",
-					    "Postman-Token": "668ee0d0-c707-45f5-801b-4fa9bf800b3c"
+					    "Cache-Control": "no-cache"
 					  },
 					  "processData": false,
 					  "data": prdata
