--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -239,8 +239,8 @@
 					var date1 =new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('.')[0];
 							console.log(date1);
 							console.log(window.patient_id);
-							console.log("fname");
-				                        console.log("lname");
+							console.log("fname : " + window.pat_fname);
+				                        console.log("lname : " + window.pat_lname);
 							//console.log(practitioner_id);
 							//console.log(window.gender2);
 							//console.log(window.dobstr2);	
