--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -147,7 +147,7 @@
 		</select>
 		</br>
 		</br>
-		<button class="button button3" style="margin-left:1em;" type="button" onclick="order_func1()">Order</button>
+		<button class="button button3" style="margin-left:1em;" type="button" onclick="order_func()">Order</button>
 	</div>
     </br>
 	</br>
