--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -424,7 +424,7 @@
 			str = str +"<tr><td>" +date1+"</td>";
            		 str = str +"<td>"+proname1 +"</td>";
             		str = str +"<td>Completed</td><";
-			 str = str +"<td>result</td><td> </td> </tr>";
+			 str = str +"<td>"+result+"</td><td> </td> </tr>";
 			  
 
 
