--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -345,6 +345,7 @@
 		}
 		$.ajax(settings3).done(function (response) {
 		  console.log(response);
+			console.log("am herrrrrrrrrrreeeeeeeeeeee");
 		 // console.log(response.entry);
 		 var str="";
 			
@@ -386,7 +387,7 @@
 		$.ajax(settings).done(function (response) {
 		console.log("Completed");
 		  console.log(response);
-
+			console.log("and herrrrrrrrrrreeeeeeeeeeee");
 		  //console.log(response.entry);
 			var str="";
 			var result;
