--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -412,6 +412,7 @@ var settings = {
 		$.ajax(settings3).done(function (response) {
 		  console.log(response);
 			console.log("am herrrrrrrrrrreeeeeeeeeeee");
+			console.log(patient_id);
 		 // console.log(response.entry);
 		 var str="";
 			
@@ -454,6 +455,7 @@ var settings = {
 		console.log("Completed");
 		  console.log(response);
 			console.log("and herrrrrrrrrrreeeeeeeeeeee");
+			console.log(patient_id);
 		  //console.log(response.entry);
 			var str="";
 			var result;
