--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -398,7 +398,7 @@ var settings = {
 	
 		
 		
-		function orderStatus() {
+		function orderStatus(patient_id) {
 		  // Pros to be completed
   		var settings3 = {
 		  "async": true,
@@ -508,7 +508,7 @@ var settings = {
 listForms();
 formDetails(FormOID);
 prorecommend();
-orderStatus();
+orderStatus(patient_id);
 		
 		
 // Flow for the patient app
