--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -400,12 +400,12 @@ var settings = {
 		
 function orderStatus() {
 		  // Pros to be completed
-	console.log(patID);
-	console.log(patient_id);
+	//console.log(patID);
+	//console.log(patient_id);
   		var settings3 = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patient_id+"&intent=order&status=active",
+		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
 		  "method": "GET",
 		  "headers": {
 			"Cache-Control": "no-cache"
@@ -446,7 +446,7 @@ function orderStatus() {
 		var settings = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patient_id+"&intent=order",
+		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patID+"&intent=order",
 		  "method": "GET",
 		  "headers": {
 		    "Cache-Control": "no-cache"
