--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -405,14 +405,14 @@ function orderStatus() {
   		var settings3 = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/4342012&intent=order&status=active",
+		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
 		  "method": "GET",
 		  "headers": {
 			"Cache-Control": "no-cache"
 		  }
 		}
 		$.ajax(settings3).done(function (response) {
-		  console.log(response);
+		  	console.log(response);
 			console.log("am herrrrrrrrrrreeeeeeeeeeee");
 			console.log(patID);
 		 // console.log(response.entry);
