--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -400,7 +400,7 @@ var settings = {
 		
 
 		  // Pros to be completed
-	//console.log(patID);
+	console.log(patID +"pls workkkkkk");
 	//console.log(patient_id);
   		var settings31 = {
 		  "async": true,
