--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -400,8 +400,8 @@ var settings = {
 		
 
 		  // Pros to be completed
-	console.log(patID +"pls workkkkkk");
-	//console.log(patient_id);
+	//console.log(patID +"pls workkkkkk");
+	console.log(patient_id + "pls workkkkkk");
   		var settings31 = {
 		  "async": true,
 		  "crossDomain": true,
