--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -398,7 +398,7 @@ var settings = {
 	
 		
 		
-
+function orderStatus(patID) {
 		  // Pros to be completed
 	//console.log(patID +"pls workkkkkk");
 	console.log(patient_id + "pls workkkkkk");
@@ -501,7 +501,7 @@ var settings = {
 			document.getElementById('t02').innerHTML += str;
 			});
 
-	
+}
 		
 	
 		
