--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -405,7 +405,7 @@ function orderStatus() {
   		var settings31 = {
 		  "async": false,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patient_id+"&intent=order&status=active",
+		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
 		  "method": "GET",
 		  "headers": {
 			"Cache-Control": "no-cache"
