--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -429,7 +429,7 @@ function orderStatus() {
 				
 				var date1 = item.resource.occurrenceDateTime;
 				var proname1 = item.resource.code.text;
-			if (proname1.match(/Please/g)!="Please"):
+			if (proname1.match(/Please/g)!="Please")
 			{
 			str = str +"<tr><td>" +date1+"</td>";
            		str = str +"<td>"+proname1 +"</td>";
