--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -484,7 +484,7 @@ function orderStatus() {
 
 								console.log(item.resource.valueQuantity.value);
 								result2 = item.resource.valueQuantity.value;
-								result1 = result2.round(1);
+								result1 = result2.toFixed(1);
 
 								  });
 							});	
