--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -441,7 +441,7 @@ function orderStatus() {
 			{
 			str = str +"<tr><td>" +date1+"</td>";
            		str = str +"<td>"+proname1 +"</td>";
-            		str = str +"<td>Ordered</td><td> -- </td><td> </td> </tr>";
+            		str = str +"<td>Ordered</td><td> -- </td><td> -- </td> </tr>";
 			  // newRow = "<td>New row text</td><td>New row 2nd cell</td>"; <-- won't work
 			  //var newRow=document.getElementById('t02').insertRow();	
 			//newRow.innerHTML = str;	
@@ -508,7 +508,7 @@ function orderStatus() {
 			str = str +"<tr><td>" +date1+"</td>";
            		 str = str +"<td>"+proname1 +"</td>";
             		str = str +"<td>Completed</td>";
-			 str = str +"<td>"+result1+"</td><td> </td> </tr>";
+			 str = str +"<td>"+result1+"</td><td> 0 - 100 </td> </tr>";
 			  
 
 
