--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -508,7 +508,7 @@ function orderStatus() {
 			str = str +"<tr><td>" +date1+"</td>";
            		 str = str +"<td>"+proname1 +"</td>";
             		str = str +"<td>Completed</td>";
-			 str = str +"<td><a target='_blank' href='./src/res.html'> PROMIS T-Score "+result1+"</a></td><td> 0 - 100 </td> </tr>";
+			 str = str +"<td><a target='_blank' href='./src/res.html'> T-Score : "+result1+"</a></td><td> 0 - 100 </td> </tr>";
 			  
 
 
