--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -516,7 +516,7 @@ function orderStatus() {
 			
 			document.getElementById('t02').innerHTML += str;
 			});
-
+window.location.reload(false);
 }
 		
 	
