--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -147,7 +147,7 @@
 		</select>
 		</br>
 		</br>
-		<button class="button button3" style="margin-left:1em;" type="button" onclick="order_func(); reload();">Order</button>
+		<button class="button button3" style="margin-left:1em;" type="button" onclick="order_func();">Order</button>
 	</div>
     </br>
 	</br>
@@ -519,9 +519,9 @@ function orderStatus() {
 
 }
 	
-function reload() {
-window.location.reload(true);	
-}
+//function reload() {
+//window.location.reload(true);	
+//}/
 	
 		
 			
