--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -240,7 +240,7 @@
 					  console.log("pro-test");
 					  console.log(response);
 					});
-									
+			window.location.reload(false);						
 			}
 		
 					
