--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -136,7 +136,7 @@
   <div class="icon-bar">
 			<span>&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-left"></i><span>&nbsp;&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-right "></i>&nbsp;&nbsp; <i style=" font-size: 7px; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i><span id="v1"></span>&nbsp;&nbsp; <i class="glyphicon glyphicon-home white"></i> <span style="margin-left:0.5em; font-color:#FFFFFF; font-size:20px;"> Order PRO</span><img border="0" style="margin-bottom:0.2em;margin-left:40em;" src="./src/images/pixel-full-screen.png"  />&nbsp;Fullscreen&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-print white"></i>&nbsp;  Print&nbsp; &nbsp; <i class="glyphicon glyphicon-refresh white"></i><span> &nbsp;2 minutes ago &nbsp; </span>
 			</div>
-  <h3 style="margin-left:0.5em;">Order PRO</h3>
+  <h3 style="margin-left:0.5em;">Order a new PRO</h3>
 	
 
 	<div style="position:relative;width:200px;height:25px;border:0;padding:0;margin:0;">
@@ -153,7 +153,7 @@
 	</br>
     </br>
 
-<h3 style="margin-left:0.5em;">Order Status</h3>
+<h3 style="margin-left:0.5em;">Previous Orders</h3>
 
 <table id="t02">
   
